@@ -5,7 +5,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Make "add new term permission" configurable + lawgiver support.
+  [mathias.leimgruber]
 
 
 1.0.1 (2016-09-28)
